services/app-web/src/pages/Dashboard/Dashboard.module.scss
@import '../../styles/uswdsImports.scss';
@import '../../styles/custom';

.wrapper {
    display: flex;
    flex: 1 0 auto;
    padding-top: units(4);
    width: 100%;
    max-width: 100%;
    background-color: $cms-color-white;
}

.container {
    width: 100%;
    max-width: 75rem;
    padding: 0rem 2rem 0rem 2rem;
}

.alertContainer {
    padding-top: units(4);
    margin: auto;
    max-width: 75rem;
}

.panel {
    padding: units(2);
    width: 100%;

    & .panelHeader {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    & .panelEmpty {
        margin-top: units(8);

        h3 {
            font-weight: font-weight('normal');
            color: color('base-light');
            text-align: center;
        }
    }
}

.alert {
    div {
        margin-top: units(1);
    }
    ol {
        margin-top: 0;
    }
    li {
        padding: units(1) 0;
    }
}

.tabs {
    width: 100%;
}

.programTag {
    background: $cms-color-primary;
}

.submittedTag {
    background: $theme-color-success;
}

.draftTag {
    background: $theme-color-warning-dark;
}

